--- a/05-bases/02-variables_input_print.ipynb
+++ b/05-bases/02-variables_input_print.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "int"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "str"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "float"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "tuple"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrer un nombre entier10\n"
+      "entrer un nombre entier12\n"
      ]
     },
     {
@@ -157,7 +157,7 @@
        "str"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrer un nombre entier10\n"
+      "entrer un nombre entier44\n"
      ]
     },
     {
@@ -193,7 +193,7 @@
        "int"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,15 +205,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrer un nombre :10\n",
-      "10.0\n"
+      "entrer un nombre :12.5\n",
+      "12.5\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -350,22 +350,26 @@
    "source": [
     "n = 10\n",
     "m = n/7\n",
-    "print('{:60}'.format(\"le résultat avec un chiffre significatif est: \"), \"{0:.0e}\".format(m))\n",
-    "print('{:60}'.format(\"le résultat avec deux chiffres significatif est: \"), \"{0:.1e}\".format(m))\n",
-    "print('{:60}'.format(\"le résultat avec trois chiffres significatif est: \"), \"{0:.2e}\".format(m))\n",
-    "print('{:60}'.format(\"le résultat avec quatre chiffres significatif est: \"), \"{0:.3e}\".format(m))"
+    "print('{:60}'.format(\"le résultat avec un chiffre significatif est: \"),\n",
+    "      \"{0:.0e}\".format(m))\n",
+    "print('{:60}'.format(\"le résultat avec deux chiffres significatif est: \"),\n",
+    "      \"{0:.1e}\".format(m))\n",
+    "print('{:60}'.format(\"le résultat avec trois chiffres significatif est: \"),\n",
+    "      \"{0:.2e}\".format(m))\n",
+    "print('{:60}'.format(\"le résultat avec quatre chiffres significatif est: \"),\n",
+    "      \"{0:.3e}\".format(m))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il est possible également d'utiliser la tabulation, grâce à la commande \\t"
+    "Il est possible également d'utiliser la tabulation, grâce à la commande `\\t`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -382,10 +386,14 @@
    "source": [
     "n = 10\n",
     "m = n/7\n",
-    "print(\"le résultat avec deux chiffre significatif est: \\t\", \"{0:.1e}\".format(m))\n",
-    "print(\"le résultat avec trois chiffre significatif est: \\t\", \"{0:.2e}\".format(m))\n",
-    "print(\"le résultat avec trois chiffre significatif est: \\t\\t\", \"{0:.2e}\".format(m))\n",
-    "print(\"le résultat avec trois chiffre significatif est: \\t\\t\\t\", \"{0:.2e}\".format(m))"
+    "print(\"le résultat avec deux chiffre significatif est: \\t\",\n",
+    "      \"{0:.1e}\".format(m))\n",
+    "print(\"le résultat avec trois chiffre significatif est: \\t\",\n",
+    "      \"{0:.2e}\".format(m))\n",
+    "print(\"le résultat avec trois chiffre significatif est: \\t\\t\",\n",
+    "      \"{0:.2e}\".format(m))\n",
+    "print(\"le résultat avec trois chiffre significatif est: \\t\\t\\t\",\n",
+    "      \"{0:.2e}\".format(m))"
    ]
   },
   {
@@ -398,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -443,12 +451,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il peut également être intéressant de passer volontairement à la ligne. On utilise pour cela la commande \\n"
+    "Il peut également être intéressant de passer volontairement à la ligne. On utilise pour cela la commande `\\n`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -456,12 +464,12 @@
      "output_type": "stream",
      "text": [
       "ceci est le début d'une phrase \n",
-      " ceci est la suite à la ligne\n"
+      "ceci est la suite à la ligne\n"
      ]
     }
    ],
    "source": [
-    "print(\"ceci est le début d'une phrase \\n\", \"ceci est la suite à la ligne\")"
+    "print(\"ceci est le début d'une phrase \\nceci est la suite à la ligne\")"
    ]
   },
   {
@@ -474,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +519,11 @@
     }
    ],
    "source": [
-    "print(\"premier résultat\", \"deuxième résultat\", \"troisième résultat\", \".\", sep = \" -- \")"
+    "print(\"premier résultat\",\n",
+    "      \"deuxième résultat\",\n",
+    "      \"troisième résultat\",\n",
+    "      \".\",\n",
+    "      sep = \" -- \")"
    ]
   },
   {
@@ -546,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
