MAJ Dominique - glossaire + act. premiere

--- a/05-bases/11-modelisation.ipynb
+++ b/05-bases/11-modelisation.ipynb
@@ -9,8 +9,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comment modéliser une courbe sous Python ?\n",
-    "![logo%20licence%20Creative%20Commons.jpg](attachment:logo%20licence%20Creative%20Commons.jpg)code sous licence creative commun CC BY-NC-SA BY Gaëlle Rebolini"
+    "# Les modélisations\n",
+    "\n",
+    "Code sous licence creative commun CC BY-NC-SA BY Gaëlle Rebolini\n",
+    "\n",
+    "![logo%20licence%20Creative%20Commons.jpg](attachment:logo%20licence%20Creative%20Commons.jpg)"
    ]
   },
   {
@@ -26,7 +29,9 @@
     "\n",
     "$P(x) = p[0] \\times x^{deg} + p[1] \\times x^{deg-1}... + p[deg]$\n",
     "\n",
-    "D'autres paramètres existent. Pour plus d'informations :https://docs.scipy.org/doc/numpy-1.15.0/reference/generated/numpy.polyfit.html"
+    "D'autres paramètres existent. Pour plus d'informations :\n",
+    "\n",
+    "https://docs.scipy.org/doc/numpy-1.15.0/reference/generated/numpy.polyfit.html"
    ]
   },
   {
@@ -56,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -75,8 +80,12 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "I=np.array([0,25e-3,50e-3,75e-3,100e-3,125e-3])      # listes numpy impératives pour réaliser la modélisation ultérieure\n",
-    "U=np.array([0,1.7,3.4,5.1,6.8,8.5])                  \n",
+    "%matplotlib inline\n",
+    "\n",
+    "# listes numpy impératives pour réaliser la modélisation ultérieure\n",
+    "I=np.array([0,25e-3,50e-3,75e-3,100e-3,125e-3])      \n",
+    "U=np.array([0,1.7,3.4,5.1,6.8,8.5]) \n",
+    "\n",
     "fig = plt.figure(figsize=(12,10))\n",
     "plt.plot(I,U,'r+',label='U=f(I)')\n",
     "plt.legend()\n",
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,19 +118,19 @@
    ],
    "source": [
     "coeff=np.polyfit(I, U,1)\n",
-    "print (coeff[0],coeff[1])"
+    "print(coeff[0],coeff[1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Avec un chiffre après la virgule :"
+    "Avec une décimale :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +142,7 @@
     }
    ],
    "source": [
-    "print ('%.1f'%coeff[0], '%.1f'%coeff[1])"
+    "print ('{0:.1f}'.format(coeff[0]),'{0:.1f}'.format(coeff[1]))"
    ]
   },
   {
@@ -145,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "U= 68.0 x I + -0.0\n",
+      "U=68.0 +-0.0\n",
       "[-1.59473833e-16  1.70000000e+00  3.40000000e+00  5.10000000e+00\n",
       "  6.80000000e+00  8.50000000e+00]\n"
      ]
@@ -160,7 +169,7 @@
    ],
    "source": [
     "Umodel = coeff[0]*I+coeff[1]\n",
-    "print('U= %.1f x I'%coeff[0],'+ %.1f'%coeff[1])\n",
+    "print('U={0:.1f}'.format(coeff[0]),'+{0:.1f}'.format(coeff[1]))\n",
     "print(Umodel)"
    ]
   },
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -231,6 +240,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "I=np.array([0,25e-3,50e-3,75e-3,100e-3,125e-3]) \n",
     "U=np.array([0,1.7,3.4,5.1,6.8,8.5])\n",
@@ -247,6 +257,19 @@
     "plt.grid()\n",
     "plt.title(\"Caractéristique Intensité-Tension d’un dipôle ohmique\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remarque : afin de réaliser une régression linéaire, il est aussi possible d'utiliser la fonction issue de la bibliothèque scipy : **scipy.stats.linregress**.\n",
+    "\n",
+    "Cette fonction est un plus ardue d'utilisation pour des débutants mais permet d'obtenir la valeur du coefficient de corrélation.\n",
+    "\n",
+    "Pour plus d'informations : \n",
+    "\n",
+    "https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.linregress.html"
    ]
   }
  ],
