--- a/07-activites/01-premiere/modelisation_frottement/PFD_modelisation_frottement.ipynb
+++ b/07-activites/01-premiere/modelisation_frottement/PFD_modelisation_frottement.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,6 +56,7 @@
     "from math import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "\n",
     "#définition d'une fonction permettant de calculer la dérivée à un instant donné\n",
