--- a/07-activites/02-seconde/dissolution/dissolution-eleve.ipynb
+++ b/07-activites/02-seconde/dissolution/dissolution-eleve.ipynb
@@ -35,41 +35,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entrer la valeur de la masse molaire du soluté en g/mol :58\n",
-      "M = 58.0 g/mol\n",
-      "M = 58.00 g/mol\n"
+      "Entrer la valeur de la masse molaire du soluté en g/mol :58.5\n",
+      "M = 58.5 g/mol\n",
+      "M =58.5 g/mol\n",
+      "M =5.85e+01 g/mol\n"
      ]
     }
    ],
    "source": [
-    "M=float(input('Entrer la valeur de la masse molaire du soluté en g/mol :')) \n",
-    "# ligne de code permettant de définir la variable M et d'afficher la consigne afin de lui attribuer une valeur.\n",
+    "# ligne de code permettant de définir la variable M et\n",
+    "# d'afficher la consigne afin de lui attribuer une valeur.\n",
+    "\n",
+    "M=float(input('Entrer la valeur de la masse molaire '\n",
+    "              'du soluté en g/mol :'))\n",
+    "\n",
+    "\n",
+    "# ligne de code permettant d'afficher la variable\n",
     "\n",
     "print ('M =',M,'g/mol')\n",
-    "# ligne de code permettant d'afficher la variable\n",
-    "print('M = %.2f g/mol' %M)                                           \n",
-    "# ligne de code permettant d'afficher la variable avec deux décimales"
+    "\n",
+    "\n",
+    "# ligne de code permettant d'afficher la variable \n",
+    "# en écriture décimale avec une décimale\n",
+    "\n",
+    "print('M ={0:.1f}'.format(M),'g/mol') \n",
+    "\n",
+    "\n",
+    "# ligne de code permettant d'afficher la variable \n",
+    "# en écriture scientifique avec deux décimales \n",
+    "# donc trois chiffres significatifs \n",
+    "\n",
+    "print('M ={0:.2e}'.format(M),'g/mol')                                           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "58"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "58"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
