--- a/07-activites/02-seconde/dissolution/dissolution-prof .ipynb
+++ b/07-activites/02-seconde/dissolution/dissolution-prof .ipynb
@@ -35,40 +35,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entrer la valeur de la masse molaire du soluté en g/mol :25\n",
-      "M = 25.0 g/mol\n",
-      "M = 25.00 g/mol\n"
+      "Entrer la valeur de la masse molaire du soluté en g/mol :58.5\n",
+      "M = 58.5 g/mol\n",
+      "M =58.5 g/mol\n",
+      "M =5.85e+01 g/mol\n"
      ]
     }
    ],
    "source": [
-    "M=float(input('Entrer la valeur de la masse molaire du soluté en g/mol :')) \n",
-    "# ligne de code permettant de définir l'objet M et d'afficher la consigne afin de lui attribuer une variable.\n",
+    "# ligne de code permettant de définir la variable M et\n",
+    "# d'afficher la consigne afin de lui attribuer une valeur.\n",
+    "\n",
+    "M=float(input('Entrer la valeur de la masse molaire '\n",
+    "              'du soluté en g/mol :'))\n",
+    "\n",
+    "\n",
+    "# ligne de code permettant d'afficher la variable\n",
     "\n",
     "print ('M =',M,'g/mol')\n",
-    "# ligne de code permettant d'afficher la variable\n",
-    "print('M = %.2f g/mol' %M)                                           \n",
-    "# ligne de code permettant d'afficher la variable avec deux décimales"
+    "\n",
+    "\n",
+    "# ligne de code permettant d'afficher la variable \n",
+    "# en écriture décimale avec une décimale\n",
+    "\n",
+    "print('M ={0:.1f}'.format(M),'g/mol') \n",
+    "\n",
+    "\n",
+    "# ligne de code permettant d'afficher la variable \n",
+    "# en écriture scientifique avec deux décimales \n",
+    "# donc trois chiffres significatifs \n",
+    "\n",
+    "print('M ={0:.2e}'.format(M),'g/mol')   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrer le volume de la solution en L :0.2500\n",
+      "V =0.2500 L\n"
+     ]
+    }
+   ],
    "source": [
     "V=float(input('Entrer le volume de la solution en L :'))\n",
-    "print('V = %.4f L' %V)"
+    "print('V ={0:.4f}'.format(V),'L') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrer la valeur de la concentration molaire en soluté apporté de la solution en mol/L :0.10\n",
+      "C =1.0e-01 mol/L\n"
+     ]
+    }
+   ],
    "source": [
     "C=float(input('Entrer la valeur de la concentration molaire en soluté apporté de la solution en mol/L :'))\n",
-    "print('C =',C,'mol/L')"
+    "print('C ={0:.1e}'.format(C),'mol/L')"
    ]
   },
   {
@@ -80,12 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m =1.5e+00 g\n"
+     ]
+    }
+   ],
    "source": [
     "m=C*M*V\n",
-    "print('m = %.3f g' %m)"
+    "print('m ={0:.1e}'.format(m),'g')"
    ]
   },
   {
@@ -113,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
