--- a/05-bases/10-graphiques_partie_2.ipynb
+++ b/05-bases/10-graphiques_partie_2.ipynb
@@ -9,8 +9,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comment créer un graphique sous Python? (deuxième partie)\n",
-    "![logo%20licence%20Creative%20Commons.jpg](attachment:logo%20licence%20Creative%20Commons.jpg)Code sous licence creative commun CC BY-NC-SA BY Gaëlle Rebolini"
+    "# Les graphiques (deuxième partie)\n",
+    "\n",
+    "Code sous licence creative commun CC BY-NC-SA BY Gaëlle Rebolini\n",
+    "\n",
+    "![logo%20licence%20Creative%20Commons.jpg](attachment:logo%20licence%20Creative%20Commons.jpg)"
    ]
   },
   {
@@ -26,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comment diviser une fenêtre graphique en plusieurs emplacements afin d'afficher plusieurs graphiques simultanément ?"
+    "## Comment afficher plusieurs graphiques simultanément ?"
    ]
   },
   {
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +99,8 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt   \n",
+    "import matplotlib.pyplot as plt  \n",
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "    \n",
     "t=np.arange(0,0.65,0.05)     \n",
@@ -104,27 +108,43 @@
     "vz=-9.8*t\n",
     "az=-9.8+0*t\n",
     "\n",
-    "    \n",
-    "plt.figure(1,figsize=(10,12))          # création de la fenêtre graphique 1\n",
-    "plt.gcf().subplots_adjust(left = 0.125, bottom = 0.2, right = 1.5, top = 0.9, wspace = 0.5, hspace = 0)\n",
+    "# création de la fenêtre graphique 1\n",
     "\n",
-    "plt.subplot(1,3,1)                     # division de la fenêtre graphique en 1 ligne, 3 colonnes, graphique en position 1\n",
-    "plt.plot(t,z,color='b', marker = '+')  # caractéristiques du graphique correspondant\n",
+    "plt.figure(1,figsize=(10,12))          \n",
+    "plt.gcf().subplots_adjust(left = 0.125, bottom = 0.2, right = 1.5, \n",
+    "                          top = 0.9, wspace = 0.5, hspace = 0)\n",
+    "\n",
+    "# division de la fenêtre graphique en 1 ligne, 3 colonnes, \n",
+    "# graphique en position 1\n",
+    "# puis caractéristiques de ce graphique\n",
+    "\n",
+    "plt.subplot(1,3,1)                     \n",
+    "plt.plot(t,z,color='b', marker = '+')  \n",
     "plt.title('position')\n",
     "plt.grid()\n",
     "plt.xlabel('t(s)')\n",
     "plt.ylabel('z(m)')\n",
     "plt.ylim(0)\n",
     "    \n",
-    "plt.subplot(1,3,2)                     # division de la fenêtre graphique en 1 ligne, 3 colonnes, graphique en position 2\n",
-    "plt.plot(t,vz,color='b', marker = '+') # caractéristiques du graphique correspondant\n",
+    "    \n",
+    "# division de la fenêtre graphique en 1 ligne, 3 colonnes, \n",
+    "# graphique en position 2\n",
+    "# puis caractéristiques de ce graphique\n",
+    "\n",
+    "plt.subplot(1,3,2)                     \n",
+    "plt.plot(t,vz,color='b', marker = '+') \n",
     "plt.title ('vitesse')\n",
     "plt.grid()\n",
     "plt.xlabel('t(s)')\n",
     "plt.ylabel('vz(m/s)')\n",
+    "\n",
+    "\n",
+    "# division de la fenêtre graphique en 1 ligne, 3 colonnes, \n",
+    "# graphique en position 3\n",
+    "# puis caractéristiques de ce graphique\n",
     "    \n",
-    "plt.subplot(1,3,3)                     # division de la fenêtre graphique en 1 ligne, 3 colonnes, graphique en position 3\n",
-    "plt.plot(t,az,color='b', marker = '+') # caractéristiques du graphique correspondant\n",
+    "plt.subplot(1,3,3)                     \n",
+    "plt.plot(t,az,color='b', marker = '+')\n",
     "plt.title('accélération')\n",
     "plt.grid()\n",
     "plt.xlabel('t(s)')\n",
@@ -142,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -159,26 +179,43 @@
     }
    ],
    "source": [
-    "plt.figure(2,figsize=(10,12))         # création de la fenêtre graphique 2\n",
-    "plt.gcf().subplots_adjust(left = 0.2, bottom = 0.2, right = 1.5, top = 0.9, wspace = 0, hspace = 0.5)\n",
+    "# création de la fenêtre graphique 2\n",
+    "\n",
+    "plt.figure(2,figsize=(10,12))         \n",
+    "plt.gcf().subplots_adjust(left = 0.2, bottom = 0.2, right = 1.5, \n",
+    "                          top = 0.9, wspace = 0, hspace = 0.5)\n",
     "    \n",
-    "plt.subplot(3,1,1)                    # division de la fenêtre graphique en 3 lignes, 1 colonne, graphique en position 1\n",
-    "plt.plot(t,z,color='b', marker = '+') # caractéristiques du graphique correspondant\n",
+    "# division de la fenêtre graphique en 3 lignes, 1 colonne, \n",
+    "# graphique en position 1\n",
+    "# puis caractéristiques de ce graphique\n",
+    "\n",
+    "plt.subplot(3,1,1)                    \n",
+    "plt.plot(t,z,color='b', marker = '+') \n",
     "plt.title('position')\n",
     "plt.grid()\n",
     "plt.xlabel('t(s)')\n",
     "plt.ylabel('z(m)')\n",
     "plt.ylim(0)\n",
     "    \n",
-    "plt.subplot(3,1,2)                     # division de la fenêtre graphique en 3 lignes, 1 colonne, graphique en position 2\n",
-    "plt.plot(t,vz,color='b', marker = '+') # caractéristiques du graphique correspondant\n",
+    "    \n",
+    "# division de la fenêtre graphique en 3 lignes, 1 colonne, \n",
+    "# graphique en position 2\n",
+    "# puis caractéristiques de ce graphique\n",
+    "\n",
+    "plt.subplot(3,1,2)                     \n",
+    "plt.plot(t,vz,color='b', marker = '+') \n",
     "plt.title ('vitesse')\n",
     "plt.grid()\n",
     "plt.xlabel('t(s)')\n",
     "plt.ylabel('vz(m/s)')\n",
     "    \n",
-    "plt.subplot(3,1,3)                     # division de la fenêtre graphique en 3 lignes, 1 colonne, graphique en position 3\n",
-    "plt.plot(t,az,color='b', marker = '+') # caractéristiques du graphique correspondant\n",
+    "    \n",
+    "# division de la fenêtre graphique en 3 lignes, 1 colonne, \n",
+    "# graphique en position 3\n",
+    "# puis caractéristiques de ce graphique\n",
+    "\n",
+    "plt.subplot(3,1,3)                     \n",
+    "plt.plot(t,az,color='b', marker = '+')\n",
     "plt.title('accélération') \n",
     "plt.grid()\n",
     "plt.xlabel('t(s)')\n",
@@ -196,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,26 +250,43 @@
     }
    ],
    "source": [
-    "plt.figure(3,figsize=(10,12))         # création de la fenêtre graphique 3\n",
-    "plt.gcf().subplots_adjust(left = 0.2, bottom = 0.2, right = 1.5, top = 0.8, wspace = 0.5, hspace = 0.5)\n",
+    "# création de la fenêtre graphique 3\n",
+    "\n",
+    "plt.figure(3,figsize=(10,12))         \n",
+    "plt.gcf().subplots_adjust(left = 0.2, bottom = 0.2, right = 1.5,\n",
+    "                          top = 0.8, wspace = 0.5, hspace = 0.5)\n",
     "    \n",
-    "plt.subplot(1,2,1)                    # division de la fenêtre graphique en 1 ligne, 2 colonnes, graphique en position 1\n",
-    "plt.plot(t,z,color='b', marker = '+') # caractéristiques du graphique correspondant\n",
+    "# division de la fenêtre graphique en 1 ligne, 2 colonnes, \n",
+    "# graphique en position 1\n",
+    "# puis caractéristiques de ce graphique\n",
+    "\n",
+    "plt.subplot(1,2,1)                    \n",
+    "plt.plot(t,z,color='b', marker = '+') \n",
     "plt.title('position') \n",
     "plt.grid()\n",
     "plt.xlabel('t(s)')\n",
     "plt.ylabel('z(m)')\n",
     "plt.ylim(0)\n",
+    "\n",
+    "\n",
+    "# division de la fenêtre graphique en 2 lignes, 2 colonnes, \n",
+    "# graphique en position 2\n",
+    "# puis caractéristiques de ce graphique\n",
     "    \n",
-    "plt.subplot(2,2,2)                     # division de la fenêtre graphique en 2 lignes, 2 colonnes, graphique en position 2\n",
-    "plt.plot(t,vz,color='b', marker = '+') # caractéristiques du graphique correspondant\n",
+    "plt.subplot(2,2,2)                     \n",
+    "plt.plot(t,vz,color='b', marker = '+') \n",
     "plt.title ('vitesse')\n",
     "plt.grid()\n",
     "plt.xlabel('t(s)')\n",
     "plt.ylabel('vz(m/s)')\n",
+    "\n",
+    "\n",
+    "# division de la fenêtre graphique en 2 lignes, 2 colonnes, \n",
+    "# graphique en position 4\n",
+    "# puis caractéristiques de ce graphique\n",
     "    \n",
-    "plt.subplot(2,2,4)                     # division de la fenêtre graphique en 2 lignes, 2 colonnes, graphique en position 4\n",
-    "plt.plot(t,az,color='b', marker = '+') # caractéristiques du graphique correspondant\n",
+    "plt.subplot(2,2,4)                     \n",
+    "plt.plot(t,az,color='b', marker = '+') \n",
     "plt.title('accélération')\n",
     "plt.grid()\n",
     "plt.xlabel('t(s)')\n",
@@ -284,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +355,8 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt   \n",
+    "import matplotlib.pyplot as plt  \n",
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "    \n",
     "t=np.arange(0,1.05,0.05)   \n",
@@ -321,9 +376,12 @@
     "plt.ylabel('z(m)')\n",
     "\n",
     "for i in range (len (z)) :\n",
-    "    plt.arrow(x[i],z[i],0.02*vx[i],0.02*vz[i],facecolor='r',edgecolor='r',width=0.008,head_width=0.02,length_includes_head=True)\n",
+    "    plt.arrow(x[i],z[i],0.02*vx[i],0.02*vz[i],facecolor='r',\n",
+    "              edgecolor='r',width=0.008,head_width=0.02,\n",
+    "              length_includes_head=True)\n",
     "\n",
-    "# ici les coordonnées vx et vy sont multipliées par 0.02 afin d'adapter l'échelle de longueur du vecteur. \n",
+    "# ici les coordonnées vx et vy sont multipliées par 0.02 afin \n",
+    "# d'adapter l'échelle de longueur du vecteur. \n",
     "    \n",
     "plt.show()"
    ]
