--- a/07-activites/01-premiere/mouvement_etude_energetique/mouvement_etude_energetique.ipynb
+++ b/07-activites/01-premiere/mouvement_etude_energetique/mouvement_etude_energetique.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +68,7 @@
     "from math import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "\n",
     "#définition d'une fonction permettant de calculer la dérivée à un instant donné\n",
