--- a/07-activites/02-seconde/loi_d_ohm/loi_d_ohm_eleve_scipy_sans_fonction.ipynb
+++ b/07-activites/02-seconde/loi_d_ohm/loi_d_ohm_eleve_scipy_sans_fonction.ipynb
@@ -64,7 +64,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -73,7 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "I=np.array([0,25e-3,50e-3,75e-3,100e-3,125e-3]) # array signifie tableau en anglais\n",
+    "# array signifie tableau en anglais\n",
+    "I=np.array([0,25e-3,50e-3,75e-3,100e-3,125e-3])\n",
     "print (I)"
    ]
   },
@@ -228,7 +230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.title(\"Caractéristique Intensité-Tension d’un dipôle ohmique\")"
+    "plt.title(\"Caractéristique Intensité-Tension \"\n",
+    "          \"d’un dipôle ohmique\")"
    ]
   },
   {
@@ -255,6 +258,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "I=np.array([0,25e-3,50e-3,75e-3,100e-3,125e-3]) \n",
     "U=np.array([0,1.7,3.4,5.1,6.8,8.5])\n",
     "fig = plt.figure(figsize=(12,10))\n",
@@ -263,7 +267,8 @@
     "plt.xlabel(\"intensité I (A)\")\n",
     "plt.ylabel(\"tension U (V)\")\n",
     "plt.grid()\n",
-    "plt.title(\"Caractéristique Intensité-Tension d’un dipôle ohmique\")\n",
+    "plt.title(\"Caractéristique Intensité-Tension \"\n",
+    "          \"d’un dipôle ohmique\")\n",
     "plt.show()"
    ]
   },
@@ -308,10 +313,10 @@
    "source": [
     "from scipy import stats\n",
     "slope, intercept, r_value, p_value, std_error = stats.linregress(I, U)\n",
-    "print ('slope %.2f'%slope)\n",
-    "print('intercept %.2f'%intercept)\n",
+    "print ('slope {0:.2f}'.format(slope))\n",
+    "print('intercept {0:.2f}'.format(intercept))\n",
     "Umodel = slope*I+intercept\n",
-    "print('U= %.2f x I' %slope)\n",
+    "print('U= {0:.2f}'.format(slope),'x I')\n",
     "print(Umodel)"
    ]
   },
@@ -359,7 +364,8 @@
     "plt.xlabel(\"intensité I (A)\")\n",
     "plt.ylabel(\"tension U (V)\")\n",
     "plt.grid()\n",
-    "plt.title(\"Caractéristique Intensité-Tension d’un dipôle ohmique\")\n",
+    "plt.title(\"Caractéristique Intensité-Tension \"\n",
+    "          \"d’un dipôle ohmique\")\n",
     "plt.show()"
    ]
   },
