--- a/05-bases/07-fonctions.ipynb
+++ b/05-bases/07-fonctions.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **I. Bibliothèques externes disponibles**\n",
+    "## Bibliothèques externes disponibles\n",
     "\n",
     "\n",
     "Une des grandes forces du langage Python réside dans le nombre important de bibliothèques logicielles externes disponibles. Celles-ci sont mises à disposition afin de pouvoir être utilisées sans avoir à les réécrire.\n",
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "4\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "2\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **II. Fonctions personnalisées**\n",
+    "## Fonctions personnalisées\n",
     "\n",
     "Un programme écrit « linéairement » est peu lisible . \n",
     "On préfère en général le décomposer en plusieurs sous-programmes, nommés fonctions. \n",
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **III. Variables locales et globales (ou portée des variables)**\n",
+    "## Variables locales et globales (ou portée des variables)\n",
     "\n",
     "Note : La portée d'une variable correspond aux parties du programme où la variable est définie.\n",
     "\n",
@@ -426,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
