--- a/07-activites/02-seconde/decroissance_radioactive/decroissance_radioactive.ipynb
+++ b/07-activites/02-seconde/decroissance_radioactive/decroissance_radioactive.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulation de décroissance radioactive\n",
+    "Simulation de décroissance radioactive par le jet de dés\n",
+    "\n",
+    "code sous licence creative commun CC BY-NC-SA BY Alexis Dendiével"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -97,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
