fix(authors): typo pour Dominique

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 BARBIER Jean-Matthieu <jean-matthieu.barbier@ac-rouen.fr>
-DEDEVEUX Dominique <dominique.dedeveux@ac-rouen.fr>
+DEVEDEUX Dominique <dominique.devedeux@ac-rouen.fr>
 DELACOUR Pascal <pascal.delacour@ac-rouen.fr>
 DENDIEVEL Alexis <alexis.dendievel@ac-rouen.fr>
 GRANDPRE Caroline <caroline.grandpre@ac-rouen.fr>
