--- a/07-activites/02-seconde/dissolution/dissolution_eleve.ipynb
+++ b/07-activites/02-seconde/dissolution/dissolution_eleve.ipynb
@@ -15,7 +15,10 @@
    "source": [
     "# Préparation d'une solution par dissolution\n",
     "\n",
-    "Contexte : Un technicien de laboratoire aurait besoin d'un petit programme en Python afin de calculer facilement la masse m de soluté à peser pour fabriquer une solution de concentration en soluté apporté C et de volume V. Aidez-le à réaliser ce petit programme!!![pre-parer-une-solution-par-dissolution-d-un-solide-img02.png](attachment:pre-parer-une-solution-par-dissolution-d-un-solide-img02.png)\n",
+    "Contexte : Un technicien de laboratoire aurait besoin d'un petit programme en Python afin de calculer facilement la masse m de soluté à peser pour fabriquer une solution de concentration en soluté apporté C et de volume V. Aidez-le à réaliser ce petit programme!!\n",
+    "\n",
+    "![pre-parer-une-solution-par-dissolution-d-un-solide-img02.png](attachment:pre-parer-une-solution-par-dissolution-d-un-solide-img02.png)\n",
+    "\n",
     "source : https://www.schoolmouv.fr"
    ]
   },
@@ -28,26 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Entrer la valeur de la masse molaire du soluté en g/mol :58.5\n",
-      "M = 58.5 g/mol\n",
-      "M =58.5 g/mol\n",
-      "M =5.85e+01 g/mol\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ligne de code permettant de définir la variable M et\n",
-    "# d'afficher la consigne afin de lui attribuer une valeur.\n",
+    "# de lui attribuer une valeur.\n",
     "\n",
-    "M=float(input('Entrer la valeur de la masse molaire '\n",
-    "              'du soluté en g/mol :'))\n",
+    "M=58.5   # masse molaire en g/mol\n",
     "\n",
     "\n",
     "# ligne de code permettant d'afficher la variable\n",
