--- a/07-activites/02-seconde/dissolution/dissolution_prof.ipynb
+++ b/07-activites/02-seconde/dissolution/dissolution_prof.ipynb
@@ -15,7 +15,10 @@
    "source": [
     "# Préparation d'une solution par dissolution\n",
     "\n",
-    "Contexte : Un technicien de laboratoire aurait besoin d'un petit programme en Python afin de calculer facilement la masse m de soluté à peser pour fabriquer une solution de concentration en soluté apporté C et de volume V. Aidez-le à réaliser ce petit programme!!![pre-parer-une-solution-par-dissolution-d-un-solide-img02.png](attachment:pre-parer-une-solution-par-dissolution-d-un-solide-img02.png)\n",
+    "Contexte : Un technicien de laboratoire aurait besoin d'un petit programme en Python afin de calculer facilement la masse m de soluté à peser pour fabriquer une solution de concentration en soluté apporté C et de volume V. Aidez-le à réaliser ce petit programme!!\n",
+    "\n",
+    "![pre-parer-une-solution-par-dissolution-d-un-solide-img02.png](attachment:pre-parer-une-solution-par-dissolution-d-un-solide-img02.png)\n",
+    "\n",
     "source : https://www.schoolmouv.fr"
    ]
   },
@@ -35,7 +38,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entrer la valeur de la masse molaire du soluté en g/mol :58.5\n",
       "M = 58.5 g/mol\n",
       "M =58.5 g/mol\n",
       "M =5.85e+01 g/mol\n"
@@ -44,10 +46,9 @@
    ],
    "source": [
     "# ligne de code permettant de définir la variable M et\n",
-    "# d'afficher la consigne afin de lui attribuer une valeur.\n",
+    "# de lui attribuer une valeur.\n",
     "\n",
-    "M=float(input('Entrer la valeur de la masse molaire '\n",
-    "              'du soluté en g/mol :'))\n",
+    "M=58.5   # masse molaire en g/mol\n",
     "\n",
     "\n",
     "# ligne de code permettant d'afficher la variable\n",
@@ -77,13 +78,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entrer le volume de la solution en L :0.2500\n",
       "V =0.2500 L\n"
      ]
     }
    ],
    "source": [
-    "V=float(input('Entrer le volume de la solution en L :'))\n",
+    "V=0.25         # volume en L\n",
     "print('V ={0:.4f}'.format(V),'L') "
    ]
   },
@@ -96,13 +96,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entrer la valeur de la concentration molaire en soluté apporté de la solution en mol/L :0.10\n",
       "C =1.0e-01 mol/L\n"
      ]
     }
    ],
    "source": [
-    "C=float(input('Entrer la valeur de la concentration molaire en soluté apporté de la solution en mol/L :'))\n",
+    "C=0.1         # Concentration molaire en mol/l\n",
     "print('C ={0:.1e}'.format(C),'mol/L')"
    ]
   },
