--- a/07-activites/02-seconde/loi_d_ohm/loi_ohm_prof_polyfit_sans_fonction.ipynb
+++ b/07-activites/02-seconde/loi_d_ohm/loi_ohm_prof_polyfit_sans_fonction.ipynb
@@ -14,14 +14,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Elle a schématisé le circuit de son expérience :![circuit.png](circuit.png)"
+    "Elle a schématisé le circuit de son expérience :\n",
+    "\n",
+    "![circuit.png](circuit.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dans la cellule ci-dessous, indiquer la signification des symboles X et Y et le nom des bornes 1, 2, 3, 4."
+    "1. Dans la cellule ci-dessous, indiquer la signification des symboles X et Y et le nom des bornes 1, 2, 3, 4."
    ]
   },
   {
@@ -36,7 +38,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mathilde relève les mesures expérimentales suivantes : \n",
+    "Mathilde relève les mesures expérimentales suivantes :\n",
+    "\n",
     "![tableau.png](tableau.png)"
    ]
   },
@@ -44,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aider Mathilde à coder la deuxième ligne du tableau de valeurs dans la cellule vide ci-dessous en vous aidant du code de la première ligne (attention les valeurs de l'intensité y ont été converties en ampère)."
+    "2. Aider Mathilde à coder la deuxième ligne du tableau de valeurs dans la cellule vide ci-dessous en vous aidant du code de la première ligne (attention les valeurs de l'intensité y ont été converties en ampère)."
    ]
   },
   {
@@ -99,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mathilde veut maintenant afficher la caractéristique « intensité-tension » du dipôle ohmique en respectant les consignes suivantes :\n",
+    "3. Mathilde veut maintenant afficher la caractéristique « intensité-tension » du dipôle ohmique en respectant les consignes suivantes :\n",
     "\n",
     "    - axe des abscisses (horizontal) : Intensité I (mA)\n",
     "    - axe des ordonnées (vertical) : Tension U(V)\n",
@@ -421,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exécutez maintenant le programme en entier! "
+    "4. Exécutez maintenant le programme en entier! "
    ]
   },
   {
@@ -464,9 +467,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il s'agit maintenant de modéliser la courbe obtenue.\n",
-    "\n",
-    "Quelle est la forme de la courbe obtenue?"
+    "5. Il s'agit maintenant de modéliser la courbe obtenue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5.1. Quelle est la forme de la courbe obtenue?"
    ]
   },
   {
@@ -478,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quelle est l'équation mathématique d'une telle courbe?"
+    "5.2. Quelle est l'équation mathématique d'une telle courbe?"
    ]
   },
   {
@@ -490,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exécutez le programme ci-dessous permettant de modéliser la courbe obtenue par une droite."
+    "5.3. Exécutez le programme ci-dessous permettant de modéliser la courbe obtenue par une droite."
    ]
   },
   {
@@ -522,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Que représente coeff[0] ?"
+    "5.3.1. Que représente coeff[0] ?"
    ]
   },
   {
@@ -534,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Que représente coeff[1] ?"
+    "5.3.2. Que représente coeff[1] ?"
    ]
   },
   {
@@ -546,7 +554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Affichez la droite modélisée grâce au programme ci-dessous."
+    "5.4. Affichez la droite modélisée grâce au programme ci-dessous."
    ]
   },
   {
@@ -584,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La tension U et l’intensité I sont-elles proportionnelles ? Pourquoi ?"
+    "5.4.1. La tension U et l’intensité I sont-elles proportionnelles ? Pourquoi ?"
    ]
   },
   {
@@ -596,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Que remarquez-vous à propos de la valeur du coefficient directeur de la droite?"
+    "5.4.2. Que remarquez-vous à propos de la valeur du coefficient directeur de la droite?"
    ]
   },
   {
@@ -608,7 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En déduire une formule appelée loi d'Ohm entre la tension U, l’intensité I et la résistance électrique R du \n",
+    "5.4.3. En déduire une formule appelée loi d'Ohm entre la tension U, l’intensité I et la résistance électrique R du \n",
     "dipôle ohmique."
    ]
   },
@@ -634,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
