Renommage activités Gaelle

--- a/07-activites/01-premiere/signal_periodique/signal_periodique_eleves.ipynb
+++ b/07-activites/01-premiere/signal_periodique/signal_periodique_eleves.ipynb
@@ -30,10 +30,22 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "\n",
+    "# cette fonction permet d'afficher un graphique à un emplacemnt précis de la fenêtre graphique. \n",
+    "# Ainsi, on peut afficher plusieurs sous-graphiques sur la même fenêtre.\n",
+    "def affichage_graphique(n,y,l,yl) :\n",
+    "    plt.subplot(3,1,n)                       # Déclaration du nombre d'emplacements dans la fenêtre\n",
+    "    plt.plot(t,y,'k-',lw=1,label=n)          # Affichage de la courbe\n",
+    "    plt.ylim(-2,2)                           # Impose les bornes min et max sur l'axe des ordonnées\n",
+    "    plt.grid()\n",
+    "    plt.xlabel('t (s)')\n",
+    "    plt.ylabel(yl)\n",
+    "    plt.legend()\n",
+    "\n",
+    "# Déclaration des variables\n",
     "Ymax=1   # amplitude en m\n",
     "T=1      # période en s\n",
     "Te=0.01   # période d'échantillonnage en s\n",
-    "\n",
     "t=[]                                             # Création des listes (vides) qui contiendront les valeurs \n",
     "y1=[]                                            # du temps et des amplitudes\n",
     "\n",
@@ -45,14 +57,7 @@
     "# création du graphique \n",
     "\n",
     "plt.figure(2,figsize=(10,12))         # création de la fenêtre graphique \n",
-    "\n",
-    "plt.subplot(3,1,1)                                       # Déclaration du nombre d'emplacements dans la fenêtre\n",
-    "plt.plot(t,y1,'k-',lw=1,label='courbe de référence')     # Affichage de la courbe\n",
-    "plt.ylim(-2,2)                                           # Impose les bornes min et max sur l'axe des ordonnées\n",
-    "plt.grid()\n",
-    "plt.xlabel('t (s)')\n",
-    "plt.ylabel('y1 (m)')\n",
-    "plt.legend()\n",
+    "affichage_graphique(1,y1,\"courbe de référence\",\"y1 (m)\")   #appel de la fonction gérant l'affichage du sous-graphique\n",
     "\n",
     "plt.show()\n"
    ]
@@ -75,17 +80,21 @@
    "source": [
     "Nous souhaitons étudier l'influence des paramètres A et T sur l'évolution temporelle du signal sinusoïdal.\n",
     "\n",
-    "Pour cela, nous avons déjà écrit en lignes 14 et 15, la création d'un signal sinusoïdal de référence noté y1.\n",
+    "Pour cela, nous avons déjà écrit en lignes 24 et 25, la création d'un signal sinusoïdal de référence noté y1.\n",
     "\n",
-    "Sur le modèle de la ligne 15, compléter la ligne 16 de manière à créer un signal sinusoïdal nommé y2 d'amplitude deux fois plus grande que y1.\n",
+    "Nous avons également déjà déclaré les listes y2 et y3 sur les lignes de code 20 et 21.\n",
     "\n",
-    "Puis, toujours sur le même modèle, compléter la ligne 17 de manière à créer un signal sinusoïdal nommé y3 de période deux fois plus grande que y1.\n",
+    "Sur le modèle de la ligne 25, compléter la ligne 26 de manière à créer un signal sinusoïdal nommé y2 d'amplitude deux fois plus grande que y1.\n",
+    "\n",
+    "Puis, toujours sur le même modèle, compléter la ligne 27 de manière à créer un signal sinusoïdal nommé y3 de période deux fois plus grande que y1.\n",
     "\n",
     "Nous souhaitons de plus, afficher ces trois signaux en trois graphiques situés l'un au-dessous de l'autre. Nous allons pour cela utiliser la méthode plt.subplot(nombre de lignes, nombre de colonnes, index) de la bibliothèque matplotlib.pyplot as plt.\n",
     "\n",
-    "Sur le modèle des lignes 22 à 28, écrire les lignes de code nécessaires à l'affichage de y2.\n",
+    "L'affichage est géré par une fonction nommée affichage_graphique qui a besoin d'un certain nombre de renseignements (fournis entre parenthèses) pour fonctionner correctement.\n",
     "\n",
-    "Puis, toujours sur le modèle des lignes 22 à 28, écrire les lignes de code nécessaires à l'affichage de y3."
+    "Sur le modèle de la ligne 31, écrire la ligne de code nécessaire à l'affichage de y2.\n",
+    "\n",
+    "Puis, toujours sur le modèle de la ligne 31, écrire la ligne de code nécessaire à l'affichage de y3."
    ]
   },
   {
@@ -97,52 +106,38 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "\n",
+    "def affichage_graphique(n,y,l,yl) :\n",
+    "    plt.subplot(3,1,n)                   # Déclaration du nombre d'emplacements dans la fenêtre\n",
+    "    plt.plot(t,y,'k-',lw=1,label=n)      # Affichage de la courbe\n",
+    "    plt.ylim(-2,2)                       # Impose les bornes min et max sur l'axe des ordonnées\n",
+    "    plt.grid()\n",
+    "    plt.xlabel('t (s)')\n",
+    "    plt.ylabel(yl)\n",
+    "    plt.legend()\n",
+    "\n",
+    "# Déclaration des variables\n",
     "Ymax=1   # amplitude en m\n",
     "T=1      # période en s\n",
     "Te=0.01   # période d'échantillonnage en s\n",
-    "\n",
-    "\n",
-    "t=[]\n",
-    "y1=[]\n",
+    "t=[]                                            # Création des listes (vides) qui contiendront les valeurs \n",
+    "y1=[]                                           # du temps et des amplitudes\n",
     "y2=[]\n",
     "y3=[]\n",
-    "for i in range (0,1000) :          \n",
-    "    t.append(i*Te)\n",
-    "    y1.append(Ymax*np.sin((2*np.pi/T)*i*Te))\n",
+    "\n",
+    "for i in range (0,1000) :                        # Boucle permettant de parcourir toutes les valeurs du temps discrétisé.\n",
+    "    t.append(i*Te)                               # La méthode append permet de rajouter une valeur en fin de la liste t\n",
+    "    y1.append(Ymax*np.sin((2*np.pi/T)*i*Te))     # la fonction sinus est contenue dans la bibliothèque numpy\n",
+    "                                                 # la constante pi est contenue dans la bibliothèque numpy\n",
+    "       \n",
     "\n",
     "    \n",
-    "   \n",
-    "\n",
     "plt.figure(2,figsize=(10,12))         # création de la fenêtre graphique \n",
-    "\n",
-    "plt.subplot(3,1,1)     \n",
-    "plt.plot(t,y1,'k-',lw=1,label='courbe de référence')    \n",
-    "plt.ylim(-2,2)   \n",
-    "plt.grid()\n",
-    "plt.xlabel('t (s)')\n",
-    "plt.ylabel('y1 (m)')\n",
-    "plt.legend()\n",
+    "affichage_graphique(1,y1,\"courbe de référence\",\"y1 (m)\")\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
