--- a/07-activites/01-premiere/suivi_avancement/suivi_avancement_eleve.ipynb
+++ b/07-activites/01-premiere/suivi_avancement/suivi_avancement_eleve.ipynb
@@ -30,9 +30,7 @@
    "source": [
     "**Entrée des nombres stoechiométriques**\n",
     "\n",
-    "Sur le modèle de la ligne de code 2, ajouter les lignes de code nécessaires (lignes 3, 4 et 5) pour demander à l'utilisateur d'entrer les valeurs des nombres stoechiométriques b, c et d.\n",
-    "\n",
-    "NOTE CODAGE : l'instruction \"int\" permet d'indiquer à l'ordinateur que votre donnée est un entier (*integer* en anglais)"
+    "Sur le modèle de la ligne de code 2, ajouter les lignes de code nécessaires (lignes 3, 4 et 5) pour entrer les valeurs des nombres stoechiométriques b, c et d."
    ]
   },
   {
@@ -42,7 +40,7 @@
    "outputs": [],
    "source": [
     "#Nombres stoechiométriques\n",
-    "a=int(input(\"Que vaut le nombre stoechiométrique du réactif A ? :\"))\n",
+    "a=2   #par exemple !! Donc à adapter...\n",
     "\n",
     "\n"
    ]
@@ -67,10 +65,8 @@
     "\n",
     "(ex : nA_0 pour l'espèce chimique A).\n",
     "\n",
-    "Sur le modèle de la ligne de code 2, ajouter les lignes de code nécessaires (lignes 3, 4 et 5) pour demander à l'utilisateur d'entrer les quantités de matière initiales des autres espèces chimiques en jeu.\n",
-    "Attention de bien entrer les valeurs en mol! Vous pourrez par exemple taper 2.5e-3  pour 2,5 mmol\n",
-    "\n",
-    "NOTE CODAGE : l'instruction \"float\" permet d'indiquer à l'ordinateur que votre donnée est un réel."
+    "Sur le modèle de la ligne de code 2, ajouter les lignes de code nécessaires (lignes 3, 4 et 5) pour entrer les quantités de matière initiales des autres espèces chimiques en jeu.\n",
+    "Attention de bien entrer les valeurs en mol! Vous pourrez par exemple taper 2.5e-3  pour 2,5 mmol"
    ]
   },
   {
@@ -80,7 +76,7 @@
    "outputs": [],
    "source": [
     "# Quantités de matières initiales\n",
-    "nA_0 = float(input('quantité de matière initiale en réactif A en mol :'))\n",
+    "nA_0 = \n",
     "nB_0 = \n",
     "\n"
    ]
